--- a/my-app/src/pages/project/project.scss
+++ b/my-app/src/pages/project/project.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
 
-    &__text {
+    &__textarea {
       display: flex;
       flex-direction: column;
       width: 60%;
