--- a/my-app/src/pages/project/project.scss
+++ b/my-app/src/pages/project/project.scss
@@ -5,6 +5,7 @@
   &__article {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 150px;
 
     &__textarea {
       display: flex;
