--- a/my-app/src/components/slider/slider.scss
+++ b/my-app/src/components/slider/slider.scss
@@ -36,6 +36,7 @@
     width: $desktop-header-radius;
     height: $desktop-header-radius;
     background-color: transparent;
+    opacity: 0.5;
     border: none;
     cursor: pointer;
     z-index: 4;
@@ -59,16 +60,52 @@
         transform: translateY(calc($desktop-header-radius / -5)) rotate(-45deg);
       }
     }
+
+    &:hover {
+      opacity: 1;
+    }
   }
 
   &__current {
     position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: hidden;
     width: 1200px;
     height: 700px;
-    background: {
-      position: center;
-      size: cover;
-      repeat: no-repeat;
+
+    &__slide {
+      display: flex;
+      align-items: center;
+      object-fit: contain;
+      width: 100%;
+      height: 100%;
+      overflow-y: hidden;
+      flex-shrink: 0;
+      transition: 750ms all ease-in-out;
+
+      &__image {
+        width: 100%;
+      }
+    }
+
+    &__indicator {
+      display: flex;
+      flex-wrap: nowrap;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+
+      &__dot {
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background-color: $color-white;
+        margin: 5px;
+        transition: 750ms all ease-in-out;
+        cursor: pointer;
+      }
     }
 
     &__right {
@@ -93,7 +130,7 @@
       &:hover {
         width: 5%;
         opacity: 0.8;
-        background-color: $primary-color;
+        background-color: $accent-color;
       }
     }
 
@@ -101,7 +138,7 @@
       width: 20px;
     }
   }
-}
+} 
 
 @keyframes fade {
   from {
