--- a/my-app/src/pages/home/index.scss
+++ b/my-app/src/pages/home/index.scss
@@ -66,15 +66,13 @@
   padding-top: 100px;
 
   &__slide {
-    object-fit: contain;
-    height: 300px;
+    text-align: -webkit-center;
     background-color: transparent;
     border: none;
     cursor: pointer;
 
     &__image {
-      height: 100%;
-      width: 100%;
+      height: 300px;
     }
   }
 }
