--- a/my-app/src/components/banner/banner.scss
+++ b/my-app/src/components/banner/banner.scss
@@ -1,6 +1,30 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
+@keyframes float {
+  0% {
+    transform: translatey(0);
+  }
+  50% {
+    transform: translatey(17%);
+  }
+  100% {
+    transform: translatey(25%);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+    transform: translatey(-25%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translatey(0);
+  }
+}
+
 .container {
   width: 100%;
   height: auto;
@@ -40,24 +64,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  left: -5%;
-  right: -5%;
-  width: 110%;
-  height: 800px;
   background: {
     size: cover;
     position: center;
     repeat: no-repeat;
     attachment: fixed;
   }
-  margin-bottom: 50px;
-  border-bottom-left-radius: 50% 20%;
-  border-bottom-right-radius: 50% 20%;
   border-bottom: solid 1px $color-black;
 
   &__textarea {
-    width: 50%;
-    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -69,8 +84,6 @@
     animation: fadein ease 2s forwards;
 
     &__title {
-      margin-bottom: 20px;
-      padding-bottom: 20px;
       border-bottom: solid 1px rgba($accent-color, 0.7);
       text-align: center;
     }
@@ -82,7 +95,7 @@
 
   &__down {
     position: absolute;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     bottom: 50px;
@@ -117,26 +130,50 @@
   }
 }
 
-@keyframes float {
-  0% {
-    transform: translatey(0);
+@include desktop-layout {
+.l-banner {
+  left: -5%;
+  right: -5%;
+  width: 110%;
+  height: 800px;
+  margin-bottom: 50px;
+  border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%;
+
+  &__textarea {
+    width: 50%;
+    height: 50%;
+
+    &__title {
+      margin-right: 15px;
+      margin-left: 15px;
+      margin-bottom: 50px;
+      padding-bottom: 50px;
+    }
   }
-  50% {
-    transform: translatey(17%);
-  }
-  100% {
-    transform: translatey(25%);
+
+  &__down {
+    display: flex;
   }
 }
-
-@keyframes fadein {
-  from {
-    opacity: 0;
-    transform: translatey(-25%);
-  }
-
-  to {
-    opacity: 1;
-    transform: translatey(0);
-  }
 }
+
+@include mobile-layout {
+  .l-banner {
+    width: 100%;
+    height: 400px;
+    margin-bottom: 50px;
+
+    &__textarea {
+      height: 30%;
+      border-radius: 5px;
+  
+      &__title {
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+      }
+    }
+  }
+  }
