--- a/my-app/src/components/navigation/navigation.scss
+++ b/my-app/src/components/navigation/navigation.scss
@@ -162,6 +162,7 @@
       right: 10%;
       height: $desktop-header-radius;
       background: transparent;
+
       &__nav {
         &__link {
           position: relative;
@@ -241,14 +242,60 @@
       }
     }
     &__menu {
-      top: 50px;
-      height: 100%;
-      background: rgba($secondary-color, 0.8);
+      opacity: 1;
+      visibility: visible;
+      top: 0;
+      left: 0;
       width: 100%;
+      height: 100%;
+      background: $primary-color;
+
       &__nav {
-        &__link__container a {
-          font-size: 200%;
-          color: $primary-color;
+        &__link {
+          position: relative;
+          display: flex;
+          padding-left: 40px;
+          padding-right: 40px;
+          align-items: center;
+          justify-content: center;
+
+          & a {
+            color: $color-black;
+            z-index: 2;
+          }
+
+          &__submenu {
+            position: absolute;
+            display: none;
+            flex-direction: column;
+            justify-content: space-around;
+            background-color: transparent;
+            z-index: 3;
+            top: calc($desktop-header-radius / 2) + 10px;
+            padding-top: calc($desktop-header-radius / 2) - 10px;
+            width: 200px;
+            left: 50%;
+            transform: translatex(-50%);
+
+            &__link {
+              border: solid 0.5px darken($primary-color, 20%);
+              border-top: none;
+              background-color: $primary-color;
+
+              & a {
+                width: 100%;
+
+                & span div {
+                  font-size: 13px;
+                  padding: 5px;
+                }
+              }
+            }
+
+            &:hover {
+              display: flex;
+            }
+          }
         }
       }
     }
