--- a/my-app/src/pages/bells/bells.scss
+++ b/my-app/src/pages/bells/bells.scss
@@ -12,6 +12,7 @@
 
   &__section {
     display: flex;
+    flex-direction: row;
     width: 100%;
     height: auto;
     margin-top: 100px;
@@ -30,6 +31,36 @@
       }
     }
 
+    &__images {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &__image {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+  
+        &__container {
+          display: flex;
+          justify-content: center;
+          width: 100%;
+  
+          & img {
+            width: 100%;
+          }
+        }
+  
+        & span {
+          font-size: 10px;
+          width: 100%;
+          text-align: center;
+          margin-top: 20px;
+        }
+      }
+    }
+
     &__articles {
       display: flex;
 
@@ -39,19 +70,22 @@
         border: solid 3px $accent-color;
         border-top-left-radius: 50px;
         border-bottom-right-radius: 50px;
-        background-color: $dark-color;
+        background-color: $color-black;
         padding: 25px;
         box-shadow: 5px 5px 15px 5px rgba($accent-color, 0.3);
 
         &__title {
           text-align: center;
           font-family: $titles;
+          color: $color-white;
         }
 
         &__text {
-          color: $color-white;
-          margin-top: 30px;
-          font-size: 15px;
+          &__paragraph {
+            color: $color-white;
+            margin-top: 30px;
+            font-size: 15px;
+          }
         }
       }
     }
@@ -63,6 +97,7 @@
         &__textarea {
           width: 50%;
         }
+
         &__articles {
           width: 25%;
 
@@ -80,6 +115,15 @@
         &__textarea {
           width: 50%;
         }
+
+        &__images {
+          width: 25%;
+
+          &__image {
+            width: 100%;
+          }
+        }
+
         &__articles {
           width: 25%;
 
