--- a/my-app/src/sass-utils/mixins.scss
+++ b/my-app/src/sass-utils/mixins.scss
@@ -1,11 +1,17 @@
 
 @mixin mobile-layout {
-    @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    @media only screen and (min-device-width: 320px) and (max-device-width: 768px) {
       @content;
     }
   }
   @mixin tablet-layout {
-    @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    @media only screen and (min-device-width: 768px) and (max-device-width: 992px) {
+      @content;
+    }
+  }
+
+  @mixin small-desktops-layout {
+    @media only screen and (min-width: 992px) and (max-width: 1224px) {
       @content;
     }
   }
