--- a/my-app/src/components/navigation/navigation.scss
+++ b/my-app/src/components/navigation/navigation.scss
@@ -1,6 +1,30 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
+@keyframes dropdown {
+  from {
+    height: 0;
+    opacity: 0;
+  }
+
+  to {
+    height: 100%;
+    opacity: 1;
+  }
+}
+
+@keyframes raise {
+  from {
+    height: 100%;
+    opacity: 1;
+  }
+
+  to {
+    height: 0;
+    opacity: 0;
+  }
+}
+
 // Navigation
 
 .navigation {
@@ -16,9 +40,9 @@
     top: 0;
     padding: 0;
     background-color: transparent;
+    z-index: 5;
 
     &__menu {
-      z-index: 2;
       display: block;
       outline: none;
       cursor: pointer;
@@ -84,7 +108,6 @@
 
     &__nav {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
       margin: 0;
       padding: 0;
@@ -123,30 +146,7 @@
   }
 }
 
-// Burger toggle button action
-
-.navigation {
-  &__burger[data-toggle="1"] {
-    .navigation__burger__menu__line {
-      &::after {
-        transform: translateX(0);
-      }
-      &:nth-child(2) {
-        transform: scaleX(0);
-      }
-    }
-  }
-
-  &__menu[data-toggle="1"] {
-    opacity: 1;
-    visibility: visible;
-
-    .navigation__menu__nav__link span div {
-      transform: translateY(0);
-      transition: 1.2s 0.1s cubic-bezier(0.35, 0, 0.07, 1);
-    }
-  }
-}
+// Media queries
 
 @include desktop-layout {
   .navigation {
@@ -221,15 +221,78 @@
   }
 }
 
+@include small-desktop-layout {
+  .navigation {
+    &__menu {
+      right: 0;
+    }
+  }
+}
+
 @include mobile-layout {
+  // Burger toggle button action
+
+  .navigation {
+    &__burger[data-toggle="1"] {
+      .navigation__burger__menu__line {
+        &::after {
+          transform: translateX(0);
+        }
+        &:nth-child(2) {
+          transform: scaleX(0);
+        }
+      }
+    }
+
+    &__menu {
+      &[data-toggle="0"] {
+        opacity: 0;
+        visibility: hidden;
+      }
+
+      &[data-toggle="1"] {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .navigation__menu__nav__link span div {
+        transform: translateY(0);
+        transition: 1.2s 0.1s cubic-bezier(0.35, 0, 0.07, 1);
+      }
+    }
+  }
+
+  // Mobile layout
   .navigation {
     &__burger {
       display: block;
+
       &__menu {
         width: $mobile-header-radius;
         height: $mobile-header-radius;
       }
+
+      &[data-toggle="0"] {
+        + .navigation__menu {
+          animation: raise ease-in-out 700ms forwards;
+        }
+
+        .navigation__burger__menu__line {
+          &:nth-child(1) {
+            transform: translateY(0) rotate(0);
+          }
+
+          &:nth-child(3) {
+            transform: translateY(0) rotate(0);
+          }
+        }
+      }
+
       &[data-toggle="1"] {
+        + .navigation__menu {
+          animation: dropdown ease-in-out 700ms forwards;
+        }
+
         .navigation__burger__menu__line {
           &:nth-child(1) {
             transform: translateY(calc($mobile-header-radius / 5)) rotate(45deg);
@@ -241,21 +304,22 @@
         }
       }
     }
+
     &__menu {
-      opacity: 1;
-      visibility: visible;
       top: 0;
-      left: 0;
       width: 100%;
-      height: 100%;
+      height: 0;
+      overflow: hidden;
       background: $primary-color;
 
       &__nav {
+        flex-direction: column;
+
         &__link {
-          position: relative;
           display: flex;
-          padding-left: 40px;
-          padding-right: 40px;
+          flex-direction: column;
+          padding-top: 20px;
+          padding-bottom: 20px;
           align-items: center;
           justify-content: center;
 
@@ -265,29 +329,22 @@
           }
 
           &__submenu {
-            position: absolute;
             display: none;
+            align-items: center;
+            justify-content: center;
             flex-direction: column;
             justify-content: space-around;
             background-color: transparent;
             z-index: 3;
-            top: calc($desktop-header-radius / 2) + 10px;
-            padding-top: calc($desktop-header-radius / 2) - 10px;
-            width: 200px;
-            left: 50%;
-            transform: translatex(-50%);
 
             &__link {
-              border: solid 0.5px darken($primary-color, 20%);
-              border-top: none;
-              background-color: $primary-color;
+              border-bottom: solid 0.5px darken($primary-color, 20%);
+              margin-top: 10px;
 
               & a {
-                width: 100%;
-
                 & span div {
-                  font-size: 13px;
-                  padding: 5px;
+                  font-size: 10px;
+                  padding: 6px;
                 }
               }
             }
