--- a/my-app/src/components/banner/banner.scss
+++ b/my-app/src/components/banner/banner.scss
@@ -77,7 +77,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba($dark-color, 0.2);
+    background-color: rgba($light-color, 0.6);
     box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.3);
     transform: translatey(-25%);
     opacity: 0;
