--- a/my-app/src/sass-utils/variables.scss
+++ b/my-app/src/sass-utils/variables.scss
@@ -2,6 +2,7 @@ $primary-color: #90cab4;
 $secondary-color: #d1ddd8;
 $accent-color: #e2832b;
 $dark-color: #3ca07a;
+$light-color: #cbe6dc;
 $color-white: #fff;
 $color-black: #333a37;
 
