--- a/my-app/src/pages/404/page_not_found.scss
+++ b/my-app/src/pages/404/page_not_found.scss
@@ -14,7 +14,7 @@ $body: "Lato", sans-serif;
   margin-top: - $desktop-header-radius;
   width: 100%;
   height: 100%;
-  background: $primary-color;
+  background: $light-color;
 
   &__top {
     display: flex;
