--- a/my-app/src/pages/bells/bells.scss
+++ b/my-app/src/pages/bells/bells.scss
@@ -9,145 +9,21 @@
   &__paragraph {
     width: 100%;
   }
+}
+.section {
+  &:last-child {
+    flex-direction: column;
 
-  &__section {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: auto;
-    margin-top: 100px;
-    justify-content: space-around;
-
-    &__textarea {
-      display: flex;
-      flex-direction: column;
-
-      &__title {
-        text-align: center;
-        font-family: $titles;
-        margin-bottom: 30px;
-        padding-bottom: 15px;
-        border-bottom: solid 1px $accent-color;
-      }
-    }
-
-    &__images {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      &__image {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    .bells__section {
+      &__textarea {
         width: 100%;
-  
-        &__container {
-          display: flex;
-          justify-content: center;
-          width: 100%;
-  
-          & img {
-            width: 100%;
-          }
-        }
-  
-        & span {
-          font-size: 10px;
-          width: 100%;
-          text-align: center;
-          margin-top: 20px;
-        }
       }
-    }
+      &__articles {
+        width: 100%;
+        justify-content: space-around;
 
-    &__articles {
-      display: flex;
-
-      &__article {
-        display: flex;
-        flex-direction: column;
-        border: solid 3px $accent-color;
-        border-top-left-radius: 50px;
-        border-bottom-right-radius: 50px;
-        background-color: $color-black;
-        padding: 25px;
-        box-shadow: 5px 5px 15px 5px rgba($accent-color, 0.3);
-
-        &__title {
-          text-align: center;
-          font-family: $titles;
-          color: $color-white;
-        }
-
-        &__text {
-          &__paragraph {
-            color: $color-white;
-            margin-top: 30px;
-            font-size: 15px;
-          }
-        }
-      }
-    }
-
-    &:nth-child(odd) {
-      flex-direction: row;
-
-      .bells__section {
-        &__textarea {
-          width: 50%;
-        }
-
-        &__articles {
+        &__article {
           width: 25%;
-
-          &__article {
-            width: 100%;
-          }
-        }
-      }
-    }
-
-    &:nth-child(even) {
-      flex-direction: row-reverse;
-
-      .bells__section {
-        &__textarea {
-          width: 50%;
-        }
-
-        &__images {
-          width: 25%;
-
-          &__image {
-            width: 100%;
-          }
-        }
-
-        &__articles {
-          width: 25%;
-
-          &__article {
-            width: 100%;
-          }
-        }
-      }
-    }
-
-    &:last-child {
-      flex-direction: column;
-
-      .bells__section {
-        &__textarea {
-          width: 100%;
-        }
-        &__articles {
-          width: 100%;
-          justify-content: space-around;
-
-          &__article {
-            width: 25%;
-          }
         }
       }
     }
