--- a/my-app/src/components/section/section.scss
+++ b/my-app/src/components/section/section.scss
@@ -89,6 +89,14 @@
         width: 50%;
       }
 
+      &__images {
+        width: 25%;
+
+        &__image {
+          width: 100%;
+        }
+      }
+
       &__articles {
         width: 25%;
 
