--- a/my-app/src/pages/home/index.scss
+++ b/my-app/src/pages/home/index.scss
@@ -9,7 +9,6 @@
   flex-direction: column;
 
   &__title {
-
   }
 
   &__article {
@@ -77,26 +76,26 @@
   .news {
     &__article {
       justify-content: space-between;
-  
+
       &__textarea {
         width: 60%;
-  
+
         &__title {
           margin-bottom: 30px;
           padding-bottom: 15px;
         }
       }
-  
+
       &__image {
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 30%;
-  
+
         &__container {
           height: 500px;
         }
-  
+
         & span {
           font-size: 10px;
           width: 100%;
@@ -104,32 +103,31 @@
           margin-top: 20px;
         }
       }
-  
+
       &:nth-child(odd) {
         flex-direction: row;
       }
-  
+
       &:nth-child(even) {
         flex-direction: row-reverse;
       }
     }
   }
-  
+
   .carousel {
     padding-top: 100px;
-  
+
     &__slide {
       text-align: -webkit-center;
       background-color: transparent;
       border: none;
       cursor: pointer;
-  
+
       &__image {
         height: 300px;
       }
     }
   }
-
 }
 
 @include small-desktop-layout {
@@ -142,81 +140,91 @@
       justify-content: space-around;
     }
   }
-  
+
   .carousel {
     padding-top: 100px;
-  
+
     &__slide {
       text-align: -webkit-center;
       background-color: transparent;
       border: none;
       cursor: pointer;
-  
+
       &__image {
         height: 300px;
       }
     }
   }
-
 }
 @include mobile-layout {
   .news {
-
     &__title {
       margin: 20px;
       text-decoration: underline;
     }
-  
 
     &__article {
       flex-direction: column;
-    
+
       &__textarea {
         width: 100%;
-  
+
         &__title {
           margin-bottom: 30px;
           padding-bottom: 15px;
         }
-  
+
         &__paragraph {
           padding: 5px;
           padding-left: 30px;
           padding-right: 30px;
         }
       }
-  
+
       &__image {
         flex-direction: row;
         position: relative;
         width: 100%;
-  
+
         &__container {
           height: 200px;
         }
-  
+
         & span {
           position: absolute;
           bottom: -20px;
           left: 50%;
-          transform: translateX(-50%) ;
+          transform: translateX(-50%);
         }
       }
     }
   }
-  
+
   .carousel {
     padding-top: 100px;
-  
+    margin-bottom: 40px;
+
     &__slide {
       text-align: -webkit-center;
       background-color: transparent;
       border: none;
       cursor: pointer;
-  
+
       &__image {
         height: 300px;
       }
+    }
+
+    .slick-next {
+      right: 25px;
+    }
+
+    .slick-prev {
+      left: 25px;
+    }
+
+    .slick-dots {
+      bottom: 0;
     }
   }
 }
