--- a/my-app/src/components/section/section.scss
+++ b/my-app/src/components/section/section.scss
@@ -2,28 +2,32 @@
 @import "../../sass-utils/variables.scss";
 
 .section {
-  display: flex;
-  flex-direction: row;
   width: 100%;
   height: auto;
   margin-top: 100px;
-  justify-content: space-around;
   background-color: rgb(217, 217, 217);
   border-radius: 20px;
   padding: 50px;
+
+  &__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  &__title {
+    text-align: center;
+    font-family: $titles;
+    margin-bottom: 30px;
+    padding-bottom: 15px;
+    border-bottom: solid 1px $accent-color;
+    width: 100%;
+  }
 
   &__textarea {
     display: flex;
     flex-direction: column;
     text-align: justify;
-
-    &__title {
-      text-align: center;
-      font-family: $titles;
-      margin-bottom: 30px;
-      padding-bottom: 15px;
-      border-bottom: solid 1px $accent-color;
-    }
   }
 
   &__images {
