--- a/my-app/src/pages/home/index.scss
+++ b/my-app/src/pages/home/index.scss
@@ -10,51 +10,6 @@
 
   &__title {
   }
-
-  &__article {
-    display: flex;
-    justify-content: space-between;
-
-    &__textarea {
-      display: flex;
-      flex-direction: column;
-
-      &__title {
-        text-align: center;
-        font-family: $titles;
-        border-bottom: solid 1px $accent-color;
-      }
-
-      &__paragraph {
-        text-align: justify;
-        padding: 5px;
-      }
-    }
-
-    &__image {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 30%;
-
-      &__container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        & img {
-          height: 100%;
-        }
-      }
-
-      & span {
-        font-size: 10px;
-        width: 100%;
-        text-align: center;
-        margin-top: 20px;
-      }
-    }
-  }
 }
 
 .carousel {
@@ -73,47 +28,6 @@
 }
 
 @include desktop-layout {
-  .news {
-    &__article {
-      justify-content: space-between;
-
-      &__textarea {
-        width: 60%;
-
-        &__title {
-          margin-bottom: 30px;
-          padding-bottom: 15px;
-        }
-      }
-
-      &__image {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 30%;
-
-        &__container {
-          height: 500px;
-        }
-
-        & span {
-          font-size: 10px;
-          width: 100%;
-          text-align: center;
-          margin-top: 20px;
-        }
-      }
-
-      &:nth-child(odd) {
-        flex-direction: row;
-      }
-
-      &:nth-child(even) {
-        flex-direction: row-reverse;
-      }
-    }
-  }
-
   .carousel {
     padding-top: 100px;
 
@@ -157,55 +71,11 @@
   }
 }
 @include mobile-layout {
-  .news {
-    &__title {
-      margin: 20px;
-      text-decoration: underline;
-    }
-
-    &__article {
-      flex-direction: column;
-
-      &__textarea {
-        width: 100%;
-
-        &__title {
-          margin-bottom: 30px;
-          padding-bottom: 15px;
-        }
-
-        &__paragraph {
-          padding: 5px;
-          padding-left: 30px;
-          padding-right: 30px;
-        }
-      }
-
-      &__image {
-        flex-direction: row;
-        position: relative;
-        width: 100%;
-
-        &__container {
-          height: 200px;
-        }
-
-        & span {
-          position: absolute;
-          bottom: -20px;
-          left: 50%;
-          transform: translateX(-50%);
-        }
-      }
-    }
-  }
-
   .carousel {
     padding-top: 100px;
     margin-bottom: 40px;
 
     &__slide {
-      text-align: -webkit-center;
       background-color: transparent;
       border: none;
       cursor: pointer;
@@ -213,6 +83,10 @@
       &__image {
         height: 300px;
       }
+    }
+
+    .slick-arrow {
+      z-index: 1;
     }
 
     .slick-next {
