--- a/my-app/src/components/section/section.scss
+++ b/my-app/src/components/section/section.scss
@@ -89,42 +89,14 @@
   }
 
   &:nth-child(odd) {
-    flex-direction: row;
-
-    .section {
-      &__images {
-        &__image {
-          width: 100%;
-        }
-      }
-
-      &__articles {
-        width: 100%;
-
-        &__article {
-          width: 100%;
-        }
-      }
+    .section__container {
+      flex-direction: row;
     }
   }
 
   &:nth-child(even) {
-    flex-direction: row-reverse;
-
-    .section {
-      &__images {
-        &__image {
-          width: 100%;
-        }
-      }
-
-      &__articles {
-        width: 100%;
-
-        &__article {
-          width: 100%;
-        }
-      }
+    .section__container {
+      flex-direction: row-reverse;
     }
   }
 }
