--- a/my-app/src/components/section/section.scss
+++ b/my-app/src/components/section/section.scss
@@ -67,8 +67,8 @@
     display: flex;
 
     &__article {
-      display: flex;
       flex-direction: column;
+      margin-bottom: 0;
       padding: 25px;
 
       &__title {
