--- a/my-app/src/pages/about/about.scss
+++ b/my-app/src/pages/about/about.scss
@@ -5,8 +5,25 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
 
-  &__paragraph {
-    width: 100%;
+#About-S2 {
+  .section__articles {
+    justify-content: space-between;
+    &__article {
+      width: 30%;
+    }
   }
+}
+
+#About-S2A1 {
+  margin-top: 0;
+}
+
+#About-S2A2 {
+  margin-top: 250px;
+}
+
+#About-S2A3 {
+  margin-top: 500px;
 }
