--- a/my-app/src/pages/about/about.scss
+++ b/my-app/src/pages/about/about.scss
@@ -10,7 +10,7 @@
 #About-S2 {
   .section__articles {
     justify-content: space-between;
-    &__article {
+    .article {
       width: 30%;
     }
   }
