--- a/my-app/src/pages/404/page_not_found.scss
+++ b/my-app/src/pages/404/page_not_found.scss
@@ -6,7 +6,7 @@
 $special: "Abril Fatface", serif;
 $body: "Lato", sans-serif;
 
-.page {
+#pnf {
   display: flex;
   flex-direction: column;
   justify-content: center;
