--- a/my-app/src/pages/bells/bells.scss
+++ b/my-app/src/pages/bells/bells.scss
@@ -1,7 +1,7 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
-.bells {
+#bells {
   display: flex;
   flex-direction: column;
   justify-content: center;
