--- a/my-app/src/pages/about/about.scss
+++ b/my-app/src/pages/about/about.scss
@@ -1,7 +1,7 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
-.about {
+#about {
   display: flex;
   flex-direction: column;
   justify-content: center;
