--- a/my-app/src/components/navigation/navigation.scss
+++ b/my-app/src/components/navigation/navigation.scss
@@ -329,7 +329,7 @@
           }
 
           &__submenu {
-            display: none;
+            display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
