--- a/my-app/src/pages/bells/bells.scss
+++ b/my-app/src/pages/bells/bells.scss
@@ -22,7 +22,7 @@
         width: 100%;
         justify-content: space-around;
 
-        &__article {
+        .article {
           width: 25%;
         }
       }
