Change article by section

--- a/my-app/src/pages/about/about.scss
+++ b/my-app/src/pages/about/about.scss
@@ -7,23 +7,23 @@
   justify-content: center;
 }
 
-#About-S2 {
-  .section__articles {
+#About-A2 {
+  .article__sections {
     justify-content: space-between;
-    .article {
+    .section {
       width: 30%;
     }
   }
 }
 
-#About-S2A1 {
+#About-A2S1 {
   margin-top: 0;
 }
 
-#About-S2A2 {
+#About-A2S2 {
   margin-top: 250px;
 }
 
-#About-S2A3 {
+#About-A2S3 {
   margin-top: 500px;
 }
