--- a/my-app/src/pages/history/history.scss
+++ b/my-app/src/pages/history/history.scss
@@ -2,8 +2,8 @@
 @import "../../sass-utils/variables.scss";
 
 #history {
-  .section {
-  &__article {
+  .article {
+  &__section {
     display: flex;
     justify-content: space-between;
 
