--- a/my-app/src/components/article/article.scss
+++ b/my-app/src/components/article/article.scss
@@ -2,64 +2,196 @@
 @import "../../sass-utils/variables.scss";
 
 .article {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 150px;
+  width: 100%;
+  height: auto;
+
+  &__container {
+    display: flex;
+  }
+
+  &__title {
+    font-family: $titles;
+    border-bottom: solid 1px $accent-color;
+    width: 100%;
+  }
 
   &__textarea {
     display: flex;
     flex-direction: column;
+    text-align: justify;
+  }
+
+  &__articles {
+    .article{
+      margin-bottom: 0;
+    }
+  }
+}
+
+@include desktop-layout {
+  .article {
+    margin-top: 100px;
+    background-color: rgb(217, 217, 217);
+    border-radius: 20px;
+    padding: 50px;
+
+    &__container {
+      flex-direction: row;
+      justify-content: space-around;
+    }
+    &__textarea__text {
+      margin-bottom: 50px;
+    }
 
     &__title {
       text-align: center;
-      font-family: $titles;
       margin-bottom: 30px;
       padding-bottom: 15px;
     }
-    &__paragraph {
-      text-align: justify;
-      margin-bottom: 50px;
-    }
-  }
 
-  &__images {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 40%;
-
-    &__image {
+    &__images {
       display: flex;
       flex-direction: column;
+      align-items: center;
       justify-content: center;
-      width: 100%;
+      width: 40%;
 
-      &__container {
+      &__image {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         width: 100%;
-        overflow: hidden;
 
-        & img {
+        &__container {
+          display: flex;
+          justify-content: center;
           width: 100%;
+          overflow: hidden;
+
+          & img {
+            display: block;
+            width: 100%;
+            transition: 0.3s;
+  
+            &:hover {
+              transform: scale(1.1);
+            }
+          }
+        }
+
+        & span {
+          font-size: 10px;
+          width: 100%;
+          text-align: center;
+          margin-top: 20px;
         }
       }
+    }
 
-      & span {
-        font-size: 10px;
-        width: 100%;
-        text-align: center;
-        margin-top: 20px;
+    &__articles {
+      display: flex;
+
+      &__article {
+        flex-direction: column;
+        margin-bottom: 0;
+        padding: 25px;
+
+        &__textarea {
+          &__title {
+            color: $accent-color;
+          }
+
+          &__paragraph {
+            font-size: 15px;
+            margin-bottom: 50px;
+          }
+        }
+      }
+    }
+
+    &:nth-child(odd) {
+      .article__container {
+        flex-direction: row;
+      }
+    }
+
+    &:nth-child(even) {
+      .article__container {
+        flex-direction: row-reverse;
       }
     }
   }
+}
+@include mobile-layout {
+  .article {
+    margin-top: 20px;
+    padding: 20px;
 
-  &:nth-child(odd) {
-    flex-direction: row;
-  }
+    &__container {
+      flex-direction: column;
+    }
 
-  &:nth-child(even) {
-    flex-direction: row-reverse;
+    &__title {
+      text-align: center;
+      margin-bottom: 15px;
+      padding-bottom: 5px;
+    }
+
+    &__textarea {
+      width: 100%;
+    }
+
+    &__images {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 80%;
+
+      &__image {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+
+        &__container {
+          display: flex;
+          justify-content: center;
+          width: 100%;
+          overflow: hidden;
+
+          & img {
+            width: 100%;
+          }
+        }
+
+        & span {
+          font-size: 10px;
+          width: 100%;
+          text-align: center;
+          margin-top: 20px;
+        }
+      }
+    }
+
+    &__articles {
+      display: flex;
+
+      &__article {
+        flex-direction: column;
+        margin-bottom: 0;
+        padding: 25px;
+
+        &__textarea {
+          &__title {
+            color: $accent-color;
+          }
+
+          &__paragraph {
+            font-size: 15px;
+          }
+        }
+      }
+    }
   }
 }
