--- a/my-app/src/components/section/section.scss
+++ b/my-app/src/components/section/section.scss
@@ -2,190 +2,70 @@
 @import "../../sass-utils/variables.scss";
 
 .section {
-  width: 100%;
-  height: auto;
-
-  &__container {
-    display: flex;
-  }
-
-  &__title {
-    font-family: $titles;
-    border-bottom: solid 1px $accent-color;
-    width: 100%;
-  }
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 150px;
 
   &__textarea {
     display: flex;
     flex-direction: column;
-    text-align: justify;
-  }
-
-  &__articles {
-    .article{
-      margin-bottom: 0;
-    }
-  }
-}
-
-@include desktop-layout {
-  .section {
-    margin-top: 100px;
-    background-color: rgb(217, 217, 217);
-    border-radius: 20px;
-    padding: 50px;
-
-    &__container {
-      flex-direction: row;
-      justify-content: space-around;
-    }
-    &__textarea__text {
-      margin-bottom: 50px;
-    }
 
     &__title {
       text-align: center;
+      font-family: $titles;
       margin-bottom: 30px;
       padding-bottom: 15px;
     }
+    &__paragraph {
+      text-align: justify;
+      margin-bottom: 50px;
+    }
+  }
 
-    &__images {
+  &__images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+
+    &__frame {
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
-      width: 40%;
+      width: 100%;
 
       &__image {
         display: flex;
-        flex-direction: column;
         justify-content: center;
         width: 100%;
+        overflow: hidden;
 
-        &__container {
-          display: flex;
-          justify-content: center;
+        & img {
+          display: block;
           width: 100%;
-          overflow: hidden;
+          transition: 0.3s;
 
-          & img {
-            width: 100%;
-          }
-        }
-
-        & span {
-          font-size: 10px;
-          width: 100%;
-          text-align: center;
-          margin-top: 20px;
-        }
-      }
-    }
-
-    &__articles {
-      display: flex;
-
-      &__article {
-        flex-direction: column;
-        margin-bottom: 0;
-        padding: 25px;
-
-        &__textarea {
-          &__title {
-            color: $accent-color;
-          }
-
-          &__paragraph {
-            font-size: 15px;
-            margin-bottom: 50px;
+          &:hover {
+            transform: scale(1.1);
           }
         }
       }
-    }
 
-    &:nth-child(odd) {
-      .section__container {
-        flex-direction: row;
-      }
-    }
-
-    &:nth-child(even) {
-      .section__container {
-        flex-direction: row-reverse;
+      & span {
+        font-size: 10px;
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
       }
     }
   }
-}
-@include mobile-layout {
-  .section {
-    margin-top: 20px;
-    padding: 20px;
 
-    &__container {
-      flex-direction: column;
-    }
+  &:nth-child(odd) {
+    flex-direction: row;
+  }
 
-    &__title {
-      text-align: center;
-      margin-bottom: 15px;
-      padding-bottom: 5px;
-    }
-
-    &__textarea {
-      width: 100%;
-    }
-
-    &__images {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 80%;
-
-      &__image {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-
-        &__container {
-          display: flex;
-          justify-content: center;
-          width: 100%;
-          overflow: hidden;
-
-          & img {
-            width: 100%;
-          }
-        }
-
-        & span {
-          font-size: 10px;
-          width: 100%;
-          text-align: center;
-          margin-top: 20px;
-        }
-      }
-    }
-
-    &__articles {
-      display: flex;
-
-      &__article {
-        flex-direction: column;
-        margin-bottom: 0;
-        padding: 25px;
-
-        &__textarea {
-          &__title {
-            color: $accent-color;
-          }
-
-          &__paragraph {
-            font-size: 15px;
-          }
-        }
-      }
-    }
+  &:nth-child(even) {
+    flex-direction: row-reverse;
   }
 }
