--- a/my-app/src/components/slider/slider.scss
+++ b/my-app/src/components/slider/slider.scss
@@ -1,7 +1,6 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
-
 @keyframes fade {
   from {
     opacity: 0;
@@ -18,8 +17,8 @@
   align-items: center;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 4;
   opacity: 0;
 
@@ -78,41 +77,93 @@
   }
 
   &__carousel {
-    position: relative;
-    width: 1024px;
-    height: 700px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    font-family: Arial;
 
-    &__slide {
-      text-align: -webkit-center;
-
-      &__image {
-        height: 700px;
-      }
+    &__list {
+      display: flex;
+      list-style: none;
+      position: relative;
+      width: 100%;
+      height: 80vh;
+      justify-content: center;
+      perspective: 300px;
     }
 
-    &__dots {
+    &__item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      font-size: 0px;
+      min-width: 50vw;
+      max-width: 90vw;
+      height: 80vh;
+      border-radius: 12px;
+      box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.5);
       position: absolute;
-      bottom: -25px;
-      display: block;
-      width: 100%;
-      padding: 0;
-      margin: 0;
-      list-style: none;
-      text-align: center;
+      transition: all 0.3s ease-in;
+      overflow: hidden;
 
-      & li {
-        position: relative;
-        display: inline-block;
-        width: 20px;
-        height: 20px;
-        margin: 0 5px;
-        padding: 0;
-        cursor: pointer;
+      &:nth-child(1) {
+        background: linear-gradient(45deg, #2d35eb 0%, #904ed4 100%);
+      }
+      &:nth-child(2) {
+        background: linear-gradient(45deg, #2d35eb 0%, #fdbb2d 100%);
+      }
+      &:nth-child(3) {
+        background: linear-gradient(45deg, #2d35eb 0%, #22c1c3 100%);
+      }
+      &:nth-child(4) {
+        background: linear-gradient(45deg, #fdbb2d 0%, #904ed4 100%);
+      }
+      &:nth-child(5) {
+        background: linear-gradient(45deg, #22c1c3 0%, #904ed4 100%);
+      }
+
+      &[data-pos="0"] {
+        z-index: 7;
+      }
+
+      &[data-pos="-1"],
+      &[data-pos="1"] {
+        opacity: 0.7;
+        filter: blur(1px) grayscale(10%);
+      }
+
+      &[data-pos="-1"] {
+        transform: translateX(-40%) scale(0.9);
+        z-index: 6;
+      }
+
+      &[data-pos="1"] {
+        transform: translateX(40%) scale(0.9);
+        z-index: 6;
+      }
+
+      &[data-pos="-2"],
+      &[data-pos="2"] {
+        opacity: 0.4;
+        filter: blur(3px) grayscale(20%);
+      }
+
+      &[data-pos="-2"] {
+        transform: translateX(-70%) scale(0.8);
+        z-index: 5;
+      }
+
+      &[data-pos="2"] {
+        transform: translateX(70%) scale(0.8);
+        z-index: 5;
+      }
+
+      &__image {
+        object-fit: contain;
+        height: 100%;
       }
     }
   }
-}
-
-.slick-track {
-  margin: auto;
 }
