--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -158,9 +158,24 @@ table {
   position: relative;
 }
 
+.fill-content{
+  width: 100%;
+  height: 100%;
+}
+
+.no-style-btn {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  outline: inherit;
+}
+
 main {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 @include large-desktop-layout {
