--- a/my-app/src/components/banner/banner.scss
+++ b/my-app/src/components/banner/banner.scss
@@ -28,7 +28,6 @@
 .container-banner {
   width: 100%;
   height: auto;
-  overflow: hidden;
 }
 
 .banner {
@@ -70,7 +69,10 @@
     repeat: no-repeat;
     attachment: fixed;
   }
-  border-bottom: solid 1px $color-black;
+  width: 100%;
+  border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 
   &__textarea {
     display: flex;
@@ -132,11 +134,7 @@
 
 @include desktop-layout {
 .l-banner {
-  width: 100%;
   height: 800px;
-  margin-bottom: 50px;
-  border-bottom-left-radius: 50% 20%;
-  border-bottom-right-radius: 50% 20%;
 
   &__textarea {
     width: 50%;
@@ -159,9 +157,7 @@
 
 @include mobile-layout {
   .l-banner {
-    width: 100%;
     height: 400px;
-    margin-bottom: 50px;
 
     &__textarea {
       height: 30%;
